--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "http://aardaakpinar.github.io"
   },
   "scripts": {
-    "test": "formatted",
+    "test": "formatted .",
     "start": "electron .",
     "build": "electron-builder .",
     "build:win64": "npm run build -- --win",
@@ -26,24 +26,23 @@
   ],
   "dependencies": {
     "@cargohq/keyval": "^1.1.0",
-    "electron-debug": "^1.0.0",
-    "electron-is-dev": "^0.3.0",
-    "electron-store": "^2.0.0",
-    "electron-titlebar": "^0.0.3",
-    "idb-keyval": "^3.0.3",
-    "mitt": "^1.1.3",
-    "mousetrap": "^1.6.1",
-    "normalize-url": "^2.0.1",
+    "electron-debug": "^4.1.0",
+    "electron-is-dev": "^3.0.1",
+    "electron-store": "^11.0.2",
+    "idb-keyval": "^6.2.2",
+    "mitt": "^3.0.1",
+    "mousetrap": "^1.6.5",
+    "normalize-url": "^8.1.1",
     "nprogress": "^0.2.0",
-    "tldjs": "^2.2.0",
+    "tldjs": "^2.3.2",
     "vkey": "^1.0.1",
     "vxv": "^3.1.6",
-    "xou": "^1.0.0"
+    "xou": "^2.0.2"
   },
   "devDependencies": {
-    "devtron": "^1.1.0",
-    "electron": "^1.3.3",
-    "electron-builder": "^20.38.5",
+    "devtron": "^1.4.0",
+    "electron": "^40.1.0",
+    "electron-builder": "^26.7.0",
     "formatted": "^1.0.0"
   },
   "build": {
